# autohooks-plugin-pytest

./: .gitignore  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci-python.yml  deploy-pypi.yml
autohooks/plugins/pytest/: __init__.py  pytest.py
changelog/: v22.6.0.md  v22.8.0.md  v23.1.0.md
tests/: __init__.py  test_plugin.py
