[tool.poetry]
name = "autohooks-plugin-pytest"
version = "0.1.0"
description = "An autohooks plugin for running tests with pytest."
authors = ["Greenbone Networks GmbH <info@greenbone.net>"]
license = "AGPL-3.0-or-later"
packages = [
  { include = "autohooks" },
]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.9.2"
autohooks = "^21.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autohooks-plugin-black = "^1.2.0"
black = "^21.5b1"
isort = "^5.8.0"
autohooks-plugin-isort = "^1.0.0"
autohooks-plugin-flake8 = "^0.1.0"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.greenbone.net/api/v4/projects/697/packages/pypi/simple"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py37", "py38"]
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[tool.autohooks]
mode = "poetry"
pre-commit = [
  "autohooks.plugins.black",
  "autohooks.plugins.isort",
  "autohooks.plugins.flake8",
]
