[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
authors = ["Greenbone Networks GmbH <info@greenbone.net>"]
readme = "README.md"
license = "AGPL-3.0-or-later"

[tool.poetry]
name = "autohooks-plugin-pytest"
version = "23.1.0"
description = "An autohooks plugin for pytest"
license = "GPL-3.0-or-later"
authors = ["Greenbone Networks GmbH <info@greenbone.net>"]
readme = "README.md"
homepage = "https://github.com/greenbone/autohooks-plugin-pytest"
repository = "https://github.com/greenbone/autohooks-plugin-pytest"
documentation = ""
classifiers = [
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
  { include = "autohooks" },
]
keywords = [
  "git",
  "formatting",
  "linting",
  "hooks",
  "pytest",
]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = ">=4.0.1"
autohooks = ">=21.3"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
mypy = ">=0.981"
pontos = ">=22.7.2"
autohooks-plugin-black = ">=22.7.0"
autohooks-plugin-pylint = ">=21.2.0"
autohooks-plugin-isort = ">=22.3.0"

[tool.black]
line-length = 79
target-version = ["py37", "py38", "py39", "py310"]
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[tool.autohooks]
mode = "poetry"
pre-commit = [
  "autohooks.plugins.black",
  "autohooks.plugins.isort",
  "autohooks.plugins.pylint",
]

[tool.pontos.version]
version-module-file = "autohooks/plugins/pytest/__version__.py"

[tool.mypy]
ignore_missing_imports = true
